# pontomais

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pontomais/: __main__.py  application.py
pontomais/api/: client.py
pontomais/commands/: about.py  base.py  comp_time.py  configure.py  proxy.py  register.py  workday.py
pontomais/config/: settings.py
tests/: test_pontomais.py
