[tool.poetry]
name = "pontomais"
version = "0.1.0"
description = ""
authors = ["Adilson Pavan <adilson.pavan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.8.1"
pyfiglet = "^0.8.post1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
